After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 671123 - amrnb, amrwbdec: fail to build with opencore-amr 0.1.3
amrnb, amrwbdec: fail to build with opencore-amr 0.1.3
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-ugly
git master
Other All
: Normal normal
: 0.10.20
Assigned To: GStreamer Maintainers
GStreamer Maintainers
: 671922 672462 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-03-01 12:47 UTC by Christian Morales Vega
Modified: 2012-03-20 12:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch (1.01 KB, application/octet-stream)
2012-03-01 12:47 UTC, Christian Morales Vega
Details

Description Christian Morales Vega 2012-03-01 12:47:01 UTC
Created attachment 208778 [details]
Patch

Because of http://opencore-amr.git.sourceforge.net/git/gitweb.cgi?p=opencore-amr/opencore-amr;a=commitdiff;h=57c3ad61b223b0d005fe85649755b131b3c3f564 gst-plugins-ugly fails to build with opencore-amr 0.1.3.

Patch attached.
Comment 1 Tim-Philipp Müller 2012-03-03 17:25:12 UTC
This needs a bit more work, we want to still build properly with previous versions for now (which will only continue to work if they're installed into /usr/include with your patch).

This should fix it:

 commit 425e6e395f6bcaff77d0393126e1253066ddcd8a
 Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
 Date:   Sat Mar 3 17:17:31 2012 +0000

    amrnb, amrwbdec: fix build with opencore-amr >= 0.1.3
    
    In previous versions, the opencore-amr include sub-directory
    would be specified in the include path in the CFLAGS, but this
    is no longer the case in newer versions, so we need to add those
    to our include directives.
    
    Based on patch by: Christian Morales Vega
    
    https://bugzilla.gnome.org/show_bug.cgi?id=671123

 commit 593ddf4bb9dc3c4d97bdde8d087db42147511274
 Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
 Date:   Sat Mar 3 16:56:13 2012 +0000

    configure: get rid of non-pkg-config ways to check for opencore-amr
Comment 2 Tim-Philipp Müller 2012-03-12 18:57:41 UTC
*** Bug 671922 has been marked as a duplicate of this bug. ***
Comment 3 Tim-Philipp Müller 2012-03-20 12:02:10 UTC
*** Bug 672462 has been marked as a duplicate of this bug. ***